--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,7 @@ header h1 {
 #btn-segunda-tela {
     background-color: #ff4500; /* Laranja */
 }
+/* Nova cor para o botão telefones */
+#btn-telefones {
+    background-color: #ff4500; /* Laranja */
+}
