--- a/styles.css
+++ b/styles.css
@@ -120,5 +120,5 @@ header h1 {
 }
 /* Nova cor para o botão telefones */
 #btn-telefones {
-    background-color: #ff4500; /* Laranja */
+    background-color: #00FA9A; /* verde claro */
 }
